# rpt-mcp

./: .dockerignore  .gitignore  CODEX.md  Dockerfile  README.md  pyproject.toml  rpt-mcp-server.py
data/: new_employee_survey.csv
examples/: Dockerfile.hr  __init__.py  attrition_utils.py  batch_attrition_agent.py  interactive_attrition_agent.py  openai_utils.py  pydantic_attrition_agent.py
scripts/: run_attrition_server.py
src/rpt_mcp_server/: __init__.py  cli.py  server.py
tests/: test_attrition_utils.py  test_cli.py  test_server.py
