[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpt-mcp"
version = "0.1.0"
description = "MCP server that exposes the SAP RPT cloud tabular prediction API through FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=4.1",
]
examples = [
    "mcp>=0.0.29",
    "openai>=1.50.0",
    "pydantic-ai>=0.0.13",
]

[project.scripts]
rpt-mcp-server = "rpt_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning:pandas"]
