[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpt-mcp"
version = "0.1.0"
description = "MCP server that exposes the SAP RPT cloud tabular prediction API through FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp~=2.13",
    "pandas~=2.3",
    "numpy~=2.3",
    "pyarrow~=22.0",
    "requests~=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]
examples = [
    "mcp~=1.21",
    "openai~=2.7",
]

[project.scripts]
rpt-mcp-server = "rpt_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas"
]
